[Fix] -> Heading text transform vertical alignment fix

--- a/assets/css/unminified/customizer-controls.css
+++ b/assets/css/unminified/customizer-controls.css
@@ -121,6 +121,14 @@
     padding-left: 5px;
 }
 
+.customize-pane-child > li[id="customize-control-astra-settings-headings-text-transform"] {
+	padding-top: 3px;
+}
+
+.customize-pane-child > li[id="customize-control-astra-settings-body-text-transform"] {
+	padding-top: 2px;
+}
+
 .customize-pane-child > li[id$="-content-layout"] > label,
 .customize-pane-child > li[id$="-sidebar-layout"] > label {
     -js-display: flex;
